themes/hexo-theme-iOS7/source/css/_partial/article.styl
icon-size = 32px
icon-gap = 25px

article
  &.post
    background color-background

  &.link
    .icon
      &:before
        content '\f0c1'

    .title
      a
        &:after
          content '\f08e'
          color color-meta
          font 12px font-icon
          padding-left 10px
          vertical-align super

  .post-content
    background-color white
    padding 20px 20px 15px 20px
    border 1px solid color-border
    margin-bottom 30px
    position relative
    @media screen and (max-width: 900px)
      padding 10px

  .gallery
    overflow hidden
    position relative
    &:hover
      .control
        opacity 1

    img
      min-width 100%
      max-width 100%
      height auto
      position absolute
      top 0
      left 0
      opacity 0

    .control
      opacity 0
      transition 0.3s

    .prev, .next
      position absolute
      top 0
      width 50%
      height 100%
      cursor pointer
      &:before
        position absolute
        font 24px/1 font-icon
        text-align center
        width 24px
        color #fff
        margin-top -12px
        top 50%

    .prev
      left 0
      &:before
        content '\f053'
        left 10px

    .next
      right 0
      &:before
        content '\f054'
        right 10px

  header
    .icon
      color rgb(150, 150, 150)
      width icon-size
      height icon-size
      margin-right icon-gap
      position absolute
      top 30px
      left 20px
      @media screen and (max-width: 900px)
        display none
      &:before
        position absolute
        font 32px font-icon    
        top 0
        left 0 
        width 32px
        text-align center

    time
      font 0.9em font-title
      margin-top 5px
      display block
      line-height 1
      a
        color rgb(150, 150, 150)

    .title
      font-weight bold
      a
        color color-meta
        &:hover
          color color-font

  .entry
    text-align justify
    line-height 1.6
    p, blockquote, ul, ol, dl, table, iframe, h3, h4, h5, h6, .video-container
      margin-top 15px

    blockquote
      font-family font-serif
      font-size 14px
      padding 0 0 0 10px
      text-align left
      border-left-color color-background
      color rgb(119, 119, 119)
      border-left-style solid
      border-left-width 8px
      footer
        border-top none
        font-size 0.8em
        line-height 1
        margin 20px 0 0
        padding-top 0
        cite
          &:before
            content '—'
            color #ccc
            padding 0 0.5em

    code, pre
      font-family font-mono

    code
      background color-background 
      color color-meta
      padding 0 5px
      margin 0 2px
      font-size 12px
      border 1px solid color-border
      border-radius 3px
      word-break: break-all;
      word-wrap: break-word;

    a
      word-break: break-all;
      word-wrap: break-word;

    pre
      background color-background 
      border 1px solid color-border
      color color-font
      font-size 12px
      margin-top 15px
      padding 7px 15px
      word-break: break-all;
      word-wrap: break-word;
      code
        color color-font
        background none
        padding 0
        margin 0
        border none
        border-radius 0

    small
      font-size 11px
      color color-meta

    ul, ol, dl
      margin-left 20px
      ul, ol, dl
        margin-top 0

    h1, h2
      font-weight normal
      border-bottom 1px solid color-border
      padding-bottom 10px
      margin-top 20px

    h3, h4, h5, h6
      font-weight normal

    img, video
      max-width 100%
      height auto
      border none

    iframe
      border none

    .caption
      display block
      margin-top 5px
      color color-meta
      position relative
      font-size 0.9em
      padding-left 25px
      &:before
        content '\f040'
        position absolute
        font 1.3em font-icon
        position absolute
        left 0
        top 3px

    .video-container
      position relative
      padding-bottom 56.25%
      padding-top 30px
      height 0
      overflow hidden
      iframe, object, embed
        position absolute
        top 0
        left 0
        width 100%
        height 100%
        margin-top 0

    .pullquote
      float right
      border none
      padding 0
      margin 1em 0 0.5em 1.5em
      text-align left
      width 45%
      font-size 1.5em

  footer
    margin-top 15px
    padding-top 10px
    border-top 1px solid color-border
    color color-meta
    font-size 0.9em
    line-height 16px
    position relative
    min-height 16px
    .addthis
      margin-top 15px
      iframe
        margin-top 0
      a
        color color-font
        &:hover
          color color-link

    a
      &:hover
        color color-font
        text-decoration none
      &:before
        font 1.1em font-icon
        padding-right 10px
        vertical-align middle

      &.more-link
        &:before
          content '\f054'

      &.comment-link
        &:before
          content '\f075'

    .categories, .tags
      color color-font
      position relative
      padding-left 25px
      margin 5px 0
      a
        color color-font
        &:hover
          color color-link
      &:before
        position absolute
        font 1.1em font-icon

    .categories
      &:before
        content '\f07b'
        top 2px
        left 1px

    .tags
      &:before
        content '\f02b'
        top 3px
        left 2px

